<resources>
    <!--Global String-->
    <string name="app_name">Monitoring Pengaduan</string>
    <string name="app_name_pdam">PDAM Taman Sari</string>
    <string name="app_name_kota">Kota Madiun</string>
    <string name="logo">Logo</string>

    <!--String for Login-->
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <!--String for Profile-->
    <string name="more">Lebih Lengkap</string>
    <string name="logout">Keluar</string>
    <string name="account">Akun</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="jabatan">Jabatan</string>
    <string name="id_induk">ID Induk</string>
    <string name="no_hp">NO HP</string>

    <!--String for Home-->
    <string name="list_pengaduan">List Pengaduan</string>
    <string name="grafik_record">Grafik Record</string>
    <string name="logo_pdam">logo pdam</string>

    <!--String for Detail Pengaduan-->
    <string name="perihal">Perihal</string>
    <string name="no_pengaduan">Nomor Pengaduan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat">Alamat</string>
    <string name="keluhan">Keluhan</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal_pengaduan">Tanggal Pengaduan</string>
    <string name="sifat">Sifat</string>
    <string name="status">Status</string>

    <!--String for Input Pengaduan-->
    <string name="input_nomor_sambung">Masukkan Nomor Sambung</string>
    <string name="button_cek">Cek</string>
    <string name="input_keterangan">Masukkan Keterangan</string>
    <string name="button_hapus">Hapus</string>
    <string name="button_proses">Proses</string>

    <!--String for Graph Overview-->
    <string name="button_overview">Overview</string>
    <string name="button_detail">Detail</string>

</resources>
