<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@drawable/ic_pdam_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/activity_profile_nama"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/nama"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/activity_profile_jabatan"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/jabatan"/>

            </android.support.design.widget.TextInputLayout>

            <!--&lt;!&ndash; ID Induk&ndash;&gt;-->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->
                <!--<EditText android:id="@+id/activity_profile_id_induk"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="text"-->
                    <!--android:hint="@string/id_induk"-->
                    <!--android:text="@{user.idInduk}"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!--&lt;!&ndash; HP &ndash;&gt;-->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->
                <!--<EditText android:id="@+id/activity_profile_hp"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="text"-->
                    <!--android:hint="@string/no_hp"-->
                    <!--android:text="@{user.hp}"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_profile_keluar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:text="@string/logout"/>

        </LinearLayout>
    </ScrollView>
</layout>