<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_detail_pengaduan_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:id="@+id/activity_detail_pengaduan_scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--TextView Judul-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_judul"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/no_pengaduan"
                        android:textStyle="italic"
                        tools:text="Judul" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_judul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textStyle="italic"
                        tools:text="Dummy Judul" />

                </LinearLayout>

                <!--TextView Nomor Pengaduan-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_noPengaduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_judul"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_judul"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_judul">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_noPengaduan"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/no_pengaduan"
                        android:textStyle="italic"
                        tools:text="Nomor Pengaduan" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_noPengaduan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textStyle="italic"
                        tools:text="Dummy No Pengaduan" />

                </LinearLayout>

                <!--TextView Nama Pelanggan-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_namaPelanggan"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_noPengaduan"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_noPengaduan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_noPengaduan">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_namaPelanggan"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/nama_pelanggan"
                        android:textStyle="italic"
                        tools:text="Nama Pelanggan" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_namaPelanggan"
                        android:layout_marginStart="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        tools:text="Dummy Nama Pelanggan" />

                </LinearLayout>

                <!--TextView Alamat-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_namaPelanggan"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_namaPelanggan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_namaPelanggan">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_alamat"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat"
                        tools:text="Alamat" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_alamat"
                        android:layout_marginStart="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Dummy Alamat" />
                </LinearLayout>

                <!--Textview Keluhan-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_keluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_alamat"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_alamat"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_alamat">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_keluhan"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/keluhan"
                        tools:text="Keluhan" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_keluhan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        tools:text="Dummy Keluhan" />
                </LinearLayout>

                <!--Textview Keterangan-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_keluhan"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_keluhan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_keluhan">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_keterangan"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/keterangan"
                        tools:text="Keterangan" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_keterangan"
                        android:layout_marginStart="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Dummy Keterangan" />
                </LinearLayout>

                <!--TextView Tanggal Pengaduan-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_tanggalPengaduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_keterangan"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_keterangan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_keterangan">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_tanggalPengaduan"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_pengaduan"
                        tools:text="Tanggal Pengaduan" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_tanggalPengaduan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        tools:text="Dummy Tanggal Pengaduan" />
                </LinearLayout>

                <!--TextView Status-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_tanggalPengaduan"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_tanggalPengaduan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_tanggalPengaduan">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_status"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        tools:text="Status" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        tools:text="Dummy Status" />
                </LinearLayout>

                <!--Textview Sifat-->
                <LinearLayout
                    android:id="@+id/activity_detail_pengaduan_linearLayout_sifat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/activity_detail_pengaduan_linearLayout_status"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_pengaduan_linearLayout_status"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_pengaduan_linearLayout_status">

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_sifat"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sifat"
                        tools:text="Sifat" />

                    <TextView
                        android:id="@+id/activity_detail_pengaduan_textView_value_sifat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        tools:text="Dummy Sifat" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>