<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_graph_overview_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:id="@+id/activity_graph_overview_scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp">

                <TextView
                    android:id="@+id/activity_graph_overview_textView_judul_keluhan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:text="Presentase Keluhan yang Masuk" />

                <android.support.v7.widget.CardView
                    android:id="@+id/activity_graph_overview_cardview_list_pengaduan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/activity_graph_overview_textView_judul_keluhan"
                    app:layout_constraintStart_toStartOf="@+id/activity_graph_overview_textView_judul_keluhan"
                    app:layout_constraintTop_toBottomOf="@+id/activity_graph_overview_textView_judul_keluhan">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            android:contentDescription="@string/logo_pdam"
                            android:src="@drawable/ic_keluhan" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="3dp"
                            android:background="#000" />

                        <TextView
                            android:id="@+id/txtDiameter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#E0E0E0"
                            android:padding="1dp"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            tools:text="Grafik 1 Soon To Be" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/activity_graph_overview_textView_judul_pengaduan"
                    android:layout_width="322dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_graph_overview_cardview_list_pengaduan"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="75dp"
                    tools:text="Presentasi Pengaduan yang Masuk" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/activity_main_detail_button_lihatSurat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@color/primary"
            android:drawableTop="@drawable/ic_delete_white_24dp"
            android:padding="16dp"
            android:text="@string/button_hapus"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_main_detail_button_statusSelesai"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/activity_main_detail_button_statusSelesai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/primary"
            android:padding="16dp"
            android:text="@string/button_proses"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableTop="@drawable/ic_process_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_detail_button_lihatSurat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_main_detail_button_lihatSurat"
            app:layout_constraintTop_toTopOf="@+id/activity_main_detail_button_lihatSurat" />

    </android.support.constraint.ConstraintLayout>

</layout>